--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-hola estudiantes, este es mi sitio web, siganme en twiter recseven.
+hola amigos, este es mi sitio web, siganme en twiter recseven e instagram
 
     
 </body>
